...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/page_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/PageToolbarTheme"
            app:titleTextColor="#FFFFFF"
            app:navigationIcon="@drawable/ic_icon_w_back">
        </android.support.v7.widget.Toolbar>
...
