...
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_card_header_large_height"
        app:layout_constraintTop_toBottomOf="@id/view_list_card_header"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_list_card_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        app:layout_constraintTop_toBottomOf="@id/view_list_card_large_header"/>

    <LinearLayout
...
