...
            android:textColor="#000000">
        </TextView>

    </LinearLayout>

    <ListView
        android:id="@+id/notes_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/linearLayout1"
...
            android:layout_gravity="end"
            android:text="@string/button_return"
            android:textColor="#FFFFFF"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/button_add_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/add_new_note"
            android:textColor="#FFFFFF"
            style="@style/Widget.AppCompat.Button.Colored"/>
...
