...
    android:layout_height="450dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A4D4B4"
        android:layout_above="@+id/button_nav_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_delete_note"
                android:layout_width="100dp"
                android:padding="17dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/button_delete"
                android:textColor="#FFFFFF"
...
